# axum_production_template

./: Cargo.toml  justfile
.github/workflows/: verify.yaml
examples/: quick_dev.rs
src/: error.rs  main.rs  model.rs
src/web/routes/: login.rs  mod.rs
